--- a/.circleci/template.yml
+++ b/.circleci/template.yml
@@ -4,8 +4,8 @@ Ec2Instance:
  Properties:
    SecurityGroups:
      - !Ref InstanceSecurityGroup
-   KeyName: udacity
-   ImageId: 'ami-068663a3c619dd892'
+   KeyName: mypemfile
+   ImageId: 'ami-07dd19a7900a1f049'
 InstanceSecurityGroup:
  Type: 'AWS::EC2::SecurityGroup'
  Properties:
