--- a/template.yml
+++ b/template.yml
@@ -1,17 +1,17 @@
 Resources:
 Ec2Instance:
- Type: 'AWS::EC2::Instance'
+ Type: AWS::EC2::Instance
  Properties:
    SecurityGroups:
      - !Ref InstanceSecurityGroup
    KeyName: mypemfile
-   ImageId: 'ami-07dd19a7900a1f049'
+   ImageId: ami-07dd19a7900a1f049
 InstanceSecurityGroup:
- Type: 'AWS::EC2::SecurityGroup'
+ Type: AWS::EC2::SecurityGroup
  Properties:
    GroupDescription: Enable SSH access via port 22
    SecurityGroupIngress:
      - IpProtocol: tcp
-       FromPort: '22'
-       ToPort: '22'
+       FromPort: 22
+       ToPort: 22
        CidrIp: 0.0.0.0/0
